# ns-poet

./: .cruft.json  .flake8  .pre-commit-config.yaml  CODEOWNERS  pyproject.toml  setup.cfg
.circleci/: config.yml
.circleci/commands/: restore-test-cache.yml  save-test-cache.yml
ns_poet/: __init__.py  cli.py  package.py  processor.py  project.py  requirements.py  util.py
ns_poet/package_targets/: base.py  python_package.py  requirement.py
tests/functional/: test_package.py  test_packages.py  test_project.py
tests/unit/: test_example.py
