[tool.poetry]
name = "ns-poet"
version = "0.1.0"
description = "Autogenerate Poetry package manifests in a monorepo"
authors = ["Jonathan Drake <jdrake@narrativescience.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/NarrativeScience/ns-poet"
repository = "https://github.com/NarrativeScience/ns-poet"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pre-commit = "^2.10.1"
pytest = "^6.2.2"
black = {version = "^21.9b0", allow-prereleases = true}
cruft = "^2.9.0"

[tool.cruft]
skip = ["pyproject.toml", "ns_poet", "tests", "README.md", ".circleci/config.yml"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
